plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
}

application {
    mainClassName = 'io.p13i.ra.RemembranceAgentClient'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'io.p13i.ra.RemembranceAgentClient'
        )
    }
}

group 'io.p13i'
version "v" + System.getenv('VERSION')

targetCompatibility = 1.8
sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
}

test {
    useJUnit()

    maxHeapSize = '1G'
}

dependencies {
    compile fileTree(dir: 'libs', include: '*.jar')
    testCompile group: 'junit', name: 'junit', version: '4.12'

    testImplementation 'junit:junit:4.12'

    // Google Drive API
    compile 'com.google.api-client:google-api-client:1.23.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
    compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
    
    // GSON
    compile 'com.google.code.gson:gson:2.8.5'

    // ASCII tables
    compile 'de.vandermeer:asciitable:0.3.2'
    
    // Gmail API
    compile 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'

    // Speech Recognition
    compile group: 'com.google.cloud', name: 'google-cloud-speech', version:'1.13.0'

    compile 'com.google.guava:guava:24.1.1-jre'
}
